--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<form action="https://formspree.io/f/meoywndl" method="POST">
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -128,7 +126,7 @@
         <section id="formulir">
             <h2>Formulir Pemesanan Joki</h2>
             
-            <form id="joki-form">
+            <form id="joki-form" action="https://formspree.io/f/meoywndl" method="POST">
                 <div>
                     <label for="nama">Nama Anda:</label>
                     <input type="text" id="nama" name="nama" placeholder="Contoh: Traveler / Aether" required>
