--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="#layanan-harga">Layanan & Harga</a></li> 
-                    <li><a href="#formulir">Pesan Sekarang</a></li>
+                    <li><a href="#kontak">Kontak</a></li>
                     <li><a href="http://localhost:3000/api/orders" target="_blank">Cek Pesanan</a></li>
                 </ul>
             </nav>
@@ -27,7 +27,7 @@
                 <p class="tagline">Jasa Joki Terbaik dan Terpercaya</p>
                 <h1>Tingkatkan Akun Anda Sekarang!</h1>
                 <p>Cepat, Aman, dengan Harga Terjangkau untuk semua kebutuhan Anda.</p>
-                <a href="#formulir" class="button-link">Pesan Joki Sekarang</a>
+                <a href="#kontak" class="button-link">Hubungi Kami Sekarang</a>
             </div>
         </div>
     </div>
@@ -37,52 +37,22 @@
         <section id="layanan-harga">
             <h2>Layanan Kami (Klik Ikon untuk Lihat Harga)</h2>
             <div class="service-list">
-                <div class="service-item-wrapper" id="wrapper-farming">
-                    <div class="service-item" data-service-id="farming">
-                        <img src="aether-icon.png" alt="Ikon Aether" class="service-icon">
-                        <div>
-                            <h3>Joki Farming Material</h3>
-                            <p>Farming material Ascension karakter, senjata, atau artefak.</p>
-                        </div>
-                    </div>
                 </div>
-            </div>
             <p style="text-align: center; margin-top: 20px; color: #e74c3c; font-weight: 600;">*Harga dapat disesuaikan tergantung kompleksitas dan *progress* akun Anda.</p>
         </section>
 
-        <section id="formulir">
-            <form id="joki-form" action="https://formspree.io/f/meoywndl" method="POST">
-                
-                <div>
-                    <select id="layanan-jasa" name="layanan" required>
-                        <option value="" disabled selected>Pilih Layanan Joki...</option>
-                        <option value="Spyrall Abyss">Joki Spyrall Abyss</option>
-                        <option value="Explorasi Map">Joki Eksplorasi Map</option>
-                        <option value="Daily Commission">Joki Daily Commission</option>
-                        <option value="Joki Quest">Joki Quest (Story/Event)</option> 
-                        <option value="Farming Material">Joki Farming Material</option>
-                        <option value="Lainnya">Lainnya</option>
-                    </select>
-                </div>
-
-                <div>
-                    <textarea id="catatan" name="catatan" rows="4" placeholder="Tulis detail pesanan atau catatan tambahan di sini (Opsional)..."></textarea>
-                </div>
-
-                <button type="submit">Kirim Pesanan</button>
-            </form>
-        </section>
-        
         <section id="kontak">
             <h2>Kontak Kami</h2>
-            <p>© 2025 KIKO JOKI GENSHIN. Layanan Joki Terpercaya.</p>
-            <p>Hubungi kami: WA +62-82230-412413</p>
+            <div class="contact-info">
+                <p>© 2025 KIKO JOKI GENSHIN. Layanan Joki Terpercaya.</p>
+                <p>Hubungi kami: <strong>WA +62-82230-412413</strong></p>
+            </div>
         </section>
 
     </div> 
 
     <footer>
-        <p>Terima kasih telah menggunakan jasa kami. Kami akan segera memproses pesanan Anda!</p>
+        <p>Terima kasih telah berkunjung. Kami siap membantu memperkuat akun Anda!</p>
     </footer>
 
     <script src="script.js"></script>
