--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <h2 style="text-align: center; margin-bottom: 30px;">ISI DI BAWAH INI JIKA KAMU MAU JOKI</h2>
                 <form id="joki-form">
                     <div class="form-group">
-                        <label>Nama Lengkap</label>
+                        <label>Nama</label>
                         <input type="text" id="nama" placeholder="Nama Anda" required>
                     </div>
                     <div class="form-group">
