--- a/index.html
+++ b/index.html
@@ -175,10 +175,11 @@
         ],
         jokiquest: [
             { n: "Archon Quest", d: "Penyelesaian Archon Quest.", p: "Rp10.000" },
+            { n: "Archon Quest", d: "Penyelesaian Archon Quest Natlan.", p: "Rp20.000" },
             { n: "World Quest", d: "Penyelesaian World Quest.", p: "Rp8.000" },
             { n: "Event Besar", d: "Pengerjaan Event Besar / Misi Utama.", p: "Rp25.000" },
             { n: "Event Kecil", d: "Pengerjaan Event Kecil / Misi Harian.", p: "Rp10.000" },
-            { n: "Quest Luna", d: "Pengerjaan Quest Luna.", p: "Rp20.000" }, 
+            { n: "Quest Luna", d: "Pengerjaan Quest Luna.", p: "Rp25.000" }, 
             { n: "Quest Aranyaka", d: "Per Jurnal petualangan hutan.", p: "Rp20.000" },
             { n: "Kisah kesukuan", d: "Quest Suku Mata Air.", p: "Rp20.000" },
             { n: "Kisah kesukuan", d: "Quest Suku Tirai daun.", p: "Rp20.000" },
@@ -186,6 +187,7 @@
             { n: "Kisah kesukuan", d: "Quest Suku Bunga Bersayap.", p: "Rp25.000" },
             { n: "Kisah kesukuan", d: "Quest Suku Penguasa Angin Malam.", p: "Rp25.000" },
             { n: "Kisah kesukuan", d: "Quest Suku Berlimpah Jaya.", p: "Rp25.000" }
+            
         ],
         farming: [
             { n: "Material Ascending (50pcs)", d: "Farming material ascending hingga 50 buah.", p: "Rp2.000" },
