--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@
         ],
         jokiquest: [
             { n: "Archon Quest", d: "Penyelesaian Archon Quest.", p: "Rp10.000" },
+            { n: "Archon Quest", d: "Penyelesaian Archon Quest Sumeru.", p: "Rp15.000" },
+            { n: "Archon Quest", d: "Penyelesaian Archon Quest Fontaine.", p: "Rp15.000" },
             { n: "Archon Quest", d: "Penyelesaian Archon Quest Natlan.", p: "Rp20.000" },
+
             { n: "World Quest", d: "Penyelesaian World Quest.", p: "Rp8.000" },
             { n: "Event Besar", d: "Pengerjaan Event Besar / Misi Utama.", p: "Rp25.000" },
             { n: "Event Kecil", d: "Pengerjaan Event Kecil / Misi Harian.", p: "Rp10.000" },
